--- a/style.css
+++ b/style.css
@@ -103,11 +103,11 @@ a, a:visited {
 
 .card {
   display: flex;
+  align-items: center;
   flex-direction: row;
   justify-content: space-between;
   margin: 4px auto;
-  padding: 6px;
-  padding-top: 2px;
+  padding: 3px 6px;
   border: 1px solid #b5b5b5;
   border-radius: 4px;
 }
@@ -134,14 +134,15 @@ a, a:visited {
 
 .buttons {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
-  margin-bottom: 6px;
+  margin: auto 4px;
+  width: 7%;
 }
 
 .buttons > button {
+  margin: 2px;
   padding: 2px;
-  width: 48%;
   border: none;
   border-radius: 4px;
   color: white;
@@ -159,10 +160,11 @@ a, a:visited {
 }
 
 .text {
-  padding: 4px 0;
-  min-height: 18px;
+  margin: 0 4px;
+  padding: 4px;
   max-height: 30vh;
   width: 34vw;
+  height: 46px;
   border: none;
   border-radius: 2px;
   background-color: #e7e7e7;
