--- a/style.css
+++ b/style.css
@@ -301,3 +301,9 @@ a, a:visited {
   background-color: #c0c0c0;
   text-align: center;
 }
+.text.pos-1, .text.pos-7, .text.pos-8 {
+	text-align: left;
+}
+.text.pos-3, .text.pos-4, .text.pos-5 {
+	text-align: right;
+}
