--- a/public/remote.css
+++ b/public/remote.css
@@ -81,10 +81,40 @@ a, a:visited {
   box-shadow: 0 -1px 10px #000000cc;
 }
 
-.list {
+.gallery > .header button {
+  padding: 6px 10px;
+  height: 34px;
+  border: none;
+  border-right: 2px solid #464646;
+  background-color: transparent;
+  color: black;
+  font-size: 18px;
+  font-family: Calibri, sans-serif;
+  transition: background-color 100ms ease-out, transform 100ms ease-out;
+}
+.gallery > .header button:hover {
+  background-color: #00000044;
+}
+
+.gallery > .header > .group {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  /* border-right: 2px solid #242424; */
+}
+
+.gallery > .header button > img {
+  margin: auto;
+  height: 100%;
+
+  object-fit: cover;
+}
+
+.list {
+  display: flex;
+	overflow-y: auto;
+	max-height: calc(100vh - 34px);
+  flex-direction: row;
+	flex-wrap: wrap;
   margin-top: 34px;
 }
 
@@ -92,7 +122,8 @@ a, a:visited {
   display: flex;
   flex-direction: column;
   margin: 10px;
-  width: 18vw;
+	width: 18vw;
+	height: max-content;
   border: 4px solid grey;
   border-radius: 6px;
   background-color: #b8b8b8;
@@ -104,7 +135,6 @@ a, a:visited {
 .tile > img {
   width: 100%;
   height: 100%;
-  /* border-radius: 6px; */
 
   object-fit: contain;
 }
@@ -112,4 +142,11 @@ a, a:visited {
 .tile > p {
   margin: 2px;
   text-align: right;
+}
+
+/* ----------Mobile---------- */
+@media only screen and (max-device-width : 640px) {
+  .tile {
+    width: calc(50vw - 28px);
+  }
 }
